# IA-

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
.github/workflows/: build.yml  docs.yml
docs/: README.md
examples/: README.md
scripts/: setup_conan.sh  update_translations.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli_main.cpp
src/app/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SimulationOverlay.cpp  SimulationOverlay.h  ViewerWidget.cpp  ViewerWidget.h  main_gui.cpp
src/core/: CMakeLists.txt
src/core/geometry/: CMakeLists.txt  Kernel.cpp  Kernel.h
src/core/plugin/: CMakeLists.txt  IPlugin.h  PluginManager.cpp  PluginManager.h
src/core/post/: CMakeLists.txt  PostProcessor.cpp  PostProcessor.h
src/core/simulation/: CMakeLists.txt  Simulator.cpp  Simulator.h
src/core/toolpath/: CMakeLists.txt  ToolpathPlanner.cpp  ToolpathPlanner.h
src/py/: CMakeLists.txt  pycore.cpp
tests/: CMakeLists.txt  geometry_tests.cpp  post_tests.cpp  toolpath_tests.cpp
translations/: fr.ts
